// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`funnel 1`] = `
{
  "annotation": {},
  "chartType": "funnel",
  "config": {
    "funnel": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#C2CEFF",
          "#B7C4FF",
          "#ACB9FF",
          "#A0AEFF",
          "#95A3FF",
          "#8998FF",
          "#7C8CFA",
          "#7080F4",
          "#6372F0",
          "#5766EC",
        ],
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "funnel": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#C2CEFF",
            "#B7C4FF",
            "#ACB9FF",
            "#A0AEFF",
            "#95A3FF",
            "#8998FF",
            "#7C8CFA",
            "#7080F4",
            "#6372F0",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "2019-Sales-sales",
      "__Dim_Color__": "2019-Sales",
      "__Dim_Detail__": "Jan",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Profit-profit",
      "__Dim_Color__": "2019-Profit",
      "__Dim_Detail__": "Jan",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 10000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "profit": 10000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Discount-discount",
      "__Dim_Color__": "2019-Discount",
      "__Dim_Detail__": "Jan",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2019",
      },
      "discount": 0.5,
      "month": "Jan",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Sales-sales",
      "__Dim_Color__": "2019-Sales",
      "__Dim_Detail__": "Feb",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Profit-profit",
      "__Dim_Color__": "2019-Profit",
      "__Dim_Detail__": "Feb",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 20000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "profit": 20000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Discount-discount",
      "__Dim_Color__": "2019-Discount",
      "__Dim_Detail__": "Feb",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2019",
      },
      "discount": 0.2,
      "month": "Feb",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Sales-sales",
      "__Dim_Color__": "2019-Sales",
      "__Dim_Detail__": "Mar",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Profit-profit",
      "__Dim_Color__": "2019-Profit",
      "__Dim_Detail__": "Mar",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "profit": 30000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Discount-discount",
      "__Dim_Color__": "2019-Discount",
      "__Dim_Detail__": "Mar",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.4,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2019",
      },
      "discount": 0.4,
      "month": "Mar",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Sales-sales",
      "__Dim_Color__": "2019-Sales",
      "__Dim_Detail__": "Apr",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Profit-profit",
      "__Dim_Color__": "2019-Profit",
      "__Dim_Detail__": "Apr",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 40000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "profit": 40000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Discount-discount",
      "__Dim_Color__": "2019-Discount",
      "__Dim_Detail__": "Apr",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2019",
      },
      "discount": 0.2,
      "month": "Apr",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Sales-sales",
      "__Dim_Color__": "2019-Sales",
      "__Dim_Detail__": "May",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Profit-profit",
      "__Dim_Color__": "2019-Profit",
      "__Dim_Detail__": "May",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 50000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "profit": 50000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Discount-discount",
      "__Dim_Color__": "2019-Discount",
      "__Dim_Detail__": "May",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.05,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2019",
      },
      "discount": 0.05,
      "month": "May",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Sales-sales",
      "__Dim_Color__": "2019-Sales",
      "__Dim_Detail__": "Jun",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Profit-profit",
      "__Dim_Color__": "2019-Profit",
      "__Dim_Detail__": "Jun",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 60000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "profit": 60000,
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2019-Discount-discount",
      "__Dim_Color__": "2019-Discount",
      "__Dim_Detail__": "Jun",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.3,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2019",
      },
      "discount": 0.3,
      "month": "Jun",
      "year": "2019",
    },
    {
      "__Dim_ColorId__": "2020-Sales-sales",
      "__Dim_Color__": "2020-Sales",
      "__Dim_Detail__": "Jan",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Profit-profit",
      "__Dim_Color__": "2020-Profit",
      "__Dim_Detail__": "Jan",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 10000,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "profit": 10000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Discount-discount",
      "__Dim_Color__": "2020-Discount",
      "__Dim_Detail__": "Jan",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "discount": 0.5,
        "month": "Jan",
        "profit": 10000,
        "sales": 200000,
        "year": "2020",
      },
      "discount": 0.5,
      "month": "Jan",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Sales-sales",
      "__Dim_Color__": "2020-Sales",
      "__Dim_Detail__": "Feb",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Profit-profit",
      "__Dim_Color__": "2020-Profit",
      "__Dim_Detail__": "Feb",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 20000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "profit": 20000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Discount-discount",
      "__Dim_Color__": "2020-Discount",
      "__Dim_Detail__": "Feb",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Feb",
        "profit": 20000,
        "sales": 400000,
        "year": "2020",
      },
      "discount": 0.2,
      "month": "Feb",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Sales-sales",
      "__Dim_Color__": "2020-Sales",
      "__Dim_Detail__": "Mar",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Profit-profit",
      "__Dim_Color__": "2020-Profit",
      "__Dim_Detail__": "Mar",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 30000,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "profit": 30000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Discount-discount",
      "__Dim_Color__": "2020-Discount",
      "__Dim_Detail__": "Mar",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.4,
      "__OriginalData__": {
        "discount": 0.4,
        "month": "Mar",
        "profit": 30000,
        "sales": 600000,
        "year": "2020",
      },
      "discount": 0.4,
      "month": "Mar",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Sales-sales",
      "__Dim_Color__": "2020-Sales",
      "__Dim_Detail__": "Apr",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Profit-profit",
      "__Dim_Color__": "2020-Profit",
      "__Dim_Detail__": "Apr",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 40000,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "profit": 40000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Discount-discount",
      "__Dim_Color__": "2020-Discount",
      "__Dim_Detail__": "Apr",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.2,
      "__OriginalData__": {
        "discount": 0.2,
        "month": "Apr",
        "profit": 40000,
        "sales": 800000,
        "year": "2020",
      },
      "discount": 0.2,
      "month": "Apr",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Sales-sales",
      "__Dim_Color__": "2020-Sales",
      "__Dim_Detail__": "May",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Profit-profit",
      "__Dim_Color__": "2020-Profit",
      "__Dim_Detail__": "May",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 50000,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "profit": 50000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Discount-discount",
      "__Dim_Color__": "2020-Discount",
      "__Dim_Detail__": "May",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.05,
      "__OriginalData__": {
        "discount": 0.05,
        "month": "May",
        "profit": 50000,
        "sales": 1000000,
        "year": "2020",
      },
      "discount": 0.05,
      "month": "May",
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Sales-sales",
      "__Dim_Color__": "2020-Sales",
      "__Dim_Detail__": "Jun",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Profit-profit",
      "__Dim_Color__": "2020-Profit",
      "__Dim_Detail__": "Jun",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 60000,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "profit": 60000,
      "year": "2020",
    },
    {
      "__Dim_ColorId__": "2020-Discount-discount",
      "__Dim_Color__": "2020-Discount",
      "__Dim_Detail__": "Jun",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": 0.3,
      "__OriginalData__": {
        "discount": 0.3,
        "month": "Jun",
        "profit": 60000,
        "sales": 1200000,
        "year": "2020",
      },
      "discount": 0.3,
      "month": "Jun",
      "year": "2020",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "discount": "Discount",
          "profit": "Profit",
          "sales": "Sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
      },
      "id": "funnel",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "2019-Discount-discount": "2019-Discount",
          "2019-Profit-profit": "2019-Profit",
          "2019-Sales-sales": "2019-Sales",
          "2020-Discount-discount": "2020-Discount",
          "2020-Profit-profit": "2020-Profit",
          "2020-Sales-sales": "2020-Sales",
        },
        "colorItems": [
          "2019-Sales-sales",
          "2019-Profit-profit",
          "2019-Discount-discount",
          "2020-Sales-sales",
          "2020-Profit-profit",
          "2020-Discount-discount",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "Yearn",
      "id": "year",
      "location": "dimension",
    },
    {
      "alias": "Month",
      "id": "month",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "year",
      "__MeaName__",
    ],
    "detail": [
      "month",
    ],
  },
  "locale": "zh-CN",
  "measures": [
    {
      "alias": "Sales",
      "autoFormat": true,
      "id": "sales",
    },
    {
      "alias": "Profit",
      "autoFormat": true,
      "id": "profit",
    },
    {
      "alias": "Discount",
      "autoFormat": true,
      "id": "discount",
    },
  ],
}
`;

exports[`funnel 2`] = `
{
  "animation": true,
  "background": "transparent",
  "categoryField": "__Dim_ColorId__",
  "color": {
    "domain": [
      "2019-Sales-sales",
      "2019-Profit-profit",
      "2019-Discount-discount",
      "2020-Sales-sales",
      "2020-Profit-profit",
      "2020-Discount-discount",
    ],
    "range": [
      "#C2CEFF",
      "#B7C4FF",
      "#ACB9FF",
      "#A0AEFF",
      "#95A3FF",
      "#8998FF",
      "#7C8CFA",
      "#7080F4",
      "#6372F0",
      "#5766EC",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "funnel",
    "values": [
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 10000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 10000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Discount-discount",
        "__Dim_Color__": "2019-Discount",
        "__Dim_Detail__": "Jan",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2019",
        },
        "discount": 0.5,
        "month": "Jan",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 20000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 20000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Discount-discount",
        "__Dim_Color__": "2019-Discount",
        "__Dim_Detail__": "Feb",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Feb",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 30000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 30000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Discount-discount",
        "__Dim_Color__": "2019-Discount",
        "__Dim_Detail__": "Mar",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2019",
        },
        "discount": 0.4,
        "month": "Mar",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 40000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 40000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Discount-discount",
        "__Dim_Color__": "2019-Discount",
        "__Dim_Detail__": "Apr",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2019",
        },
        "discount": 0.2,
        "month": "Apr",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 50000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 50000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Discount-discount",
        "__Dim_Color__": "2019-Discount",
        "__Dim_Detail__": "May",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2019",
        },
        "discount": 0.05,
        "month": "May",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 60000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 60000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Discount-discount",
        "__Dim_Color__": "2019-Discount",
        "__Dim_Detail__": "Jun",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2019",
        },
        "discount": 0.3,
        "month": "Jun",
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 10000,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 10000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Discount-discount",
        "__Dim_Color__": "2020-Discount",
        "__Dim_Detail__": "Jan",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "discount": 0.5,
          "month": "Jan",
          "profit": 10000,
          "sales": 200000,
          "year": "2020",
        },
        "discount": 0.5,
        "month": "Jan",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 20000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 20000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Discount-discount",
        "__Dim_Color__": "2020-Discount",
        "__Dim_Detail__": "Feb",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Feb",
          "profit": 20000,
          "sales": 400000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Feb",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 30000,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 30000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Discount-discount",
        "__Dim_Color__": "2020-Discount",
        "__Dim_Detail__": "Mar",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.4,
        "__OriginalData__": {
          "discount": 0.4,
          "month": "Mar",
          "profit": 30000,
          "sales": 600000,
          "year": "2020",
        },
        "discount": 0.4,
        "month": "Mar",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 40000,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 40000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Discount-discount",
        "__Dim_Color__": "2020-Discount",
        "__Dim_Detail__": "Apr",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.2,
        "__OriginalData__": {
          "discount": 0.2,
          "month": "Apr",
          "profit": 40000,
          "sales": 800000,
          "year": "2020",
        },
        "discount": 0.2,
        "month": "Apr",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 50000,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 50000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Discount-discount",
        "__Dim_Color__": "2020-Discount",
        "__Dim_Detail__": "May",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.05,
        "__OriginalData__": {
          "discount": 0.05,
          "month": "May",
          "profit": 50000,
          "sales": 1000000,
          "year": "2020",
        },
        "discount": 0.05,
        "month": "May",
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 60000,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 60000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Discount-discount",
        "__Dim_Color__": "2020-Discount",
        "__Dim_Detail__": "Jun",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": 0.3,
        "__OriginalData__": {
          "discount": 0.3,
          "month": "Jun",
          "profit": 60000,
          "sales": 1200000,
          "year": "2020",
        },
        "discount": 0.3,
        "month": "Jun",
        "year": "2020",
      },
    ],
  },
  "funnel": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "cornerRadius": 4,
      "fill": {
        "field": "__Dim_ColorId__",
        "scale": "color",
      },
    },
  },
  "isTransform": true,
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "maxSize": "75%",
  "minSize": "10%",
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "shape": "rect",
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "transformLabel": {
    "visible": true,
  },
  "type": "funnel",
  "valueField": "__MeaValue__",
}
`;
